# FireheadEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  setup.py
libraries/: bootstrap.json
scripts/: compile-shaders.bat
shaders/: shader.frag  shader.vert
source/app/: main.cpp
source/core/: CMakeLists.txt  FHEMacros.h  Registry.cpp  Registry.h  initializer.cpp  initializer.h
source/input/: CMakeLists.txt  FHETriggerType.h  InputListener.cpp  InputListener.h  InputManager.cpp  InputManager.h
source/logger/: CMakeLists.txt  logger.cpp  logger.h
source/renderer/: CMakeLists.txt  Camera.h  FHEImage.h  Model.h  QueueFamilyIndices.h  SwapChainSupportDetails.h  UniformBufferObject.h  Vertex.h  renderLoop.cpp  renderLoop.h
source/renderer/shaders/: compile-shaders.bat  shader.vert  vert.spv
textures/: texture.ktx
tools/: compile-shaders.bat  setup.py
